Refactor and clean up scripts, configs, and tests
Streamlined shell scripts with organized sections and cleaner messages, removed redundant properties in configs, and fixed minor typos. Simplified test logic, enhanced code readability, and clarified documentation on remote commands and database operations.